2010-09-22  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed.

        [WINCE] Build fix for ResourceHandleWin after r67291.

        * platform/network/win/ResourceHandleWin.cpp:
        (WebCore::ResourceHandle::loadResourceSynchronously): Replace Frame* parameter with NetworkingContext*.

2010-09-22  Chris Guillory   <chris.guillory@google.com>

        Reviewed by Chris Fleizach.

        Crash due to bad cast in AXObjectCacheChromium.cpp.
        https://bugs.webkit.org/show_bug.cgi?id=46237

        * accessibility/chromium/AXObjectCacheChromium.cpp:
        (WebCore::AXObjectCache::postPlatformNotification):
        * page/ChromeClient.h:
        (WebCore::ChromeClient::postAccessibilityNotification):
        (WebCore::ChromeClient::didChangeAccessibilityObjectState):
        (WebCore::ChromeClient::didChangeAccessibilityObjectChildren):
        * page/chromium/ChromeClientChromium.h:

2010-09-22  Chris Rogers  <crogers@google.com>

        Reviewed by James Robinson.

        Add HRTFElevation files
        https://bugs.webkit.org/show_bug.cgi?id=45864

        No new tests since audio API is not yet implemented.

        * platform/audio/HRTFElevation.cpp: Added.
        (WebCore::HRTFElevation::calculateSymmetricKernelsForAzimuthElevation):
        (WebCore::HRTFElevation::calculateKernelsForAzimuthElevation):
        (WebCore::HRTFElevation::createForSubject):
        (WebCore::HRTFElevation::createByInterpolatingSlices):
        (WebCore::HRTFElevation::getKernelsFromAzimuth):
        * platform/audio/HRTFElevation.h: Added.
        (WebCore::HRTFElevation::kernelListL):
        (WebCore::HRTFElevation::kernelListR):
        (WebCore::HRTFElevation::elevationAngle):
        (WebCore::HRTFElevation::numberOfAzimuths):
        (WebCore::HRTFElevation::sampleRate):
        (WebCore::HRTFElevation::HRTFElevation):

2010-09-22  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.
